RESOLVED FIXED97280
REGRESSION (r126763): Incorrect line breaking when both kerning and word spacing are enabled
https://bugs.webkit.org/show_bug.cgi?id=97280
Summary REGRESSION (r126763): Incorrect line breaking when both kerning and word spac...
mitz
Reported 2012-09-20 18:48:38 PDT
To reproduce: run-webkit-tests --complex fast/text/basic/004.html Line breaking isn’t accounting for word spacing correctly. This was caused by <http://trac.webkit.org/r126763>, the fix for bug 83045.
Attachments
Make TextLayout::width() apply word spacing except at the first character of a run (4.31 KB, patch)
2012-09-21 00:21 PDT, mitz
adele: review+
mitz
Comment 1 2012-09-20 21:01:39 PDT
Please ignore the original description. The failure happens when the test is modified to enable kerning.
mitz
Comment 2 2012-09-20 21:08:46 PDT
The URL contains a reduction. <div style="border: solid; width: 50px; word-spacing: 50px; -webkit-font-kerning: normal;">a b</div>
mitz
Comment 3 2012-09-20 23:41:31 PDT
TextLayout uses fontWithNoWordSpacing…
mitz
Comment 4 2012-09-21 00:21:21 PDT
Created attachment 165064 [details] Make TextLayout::width() apply word spacing except at the first character of a run
mitz
Comment 5 2012-09-21 09:21:48 PDT
Note You need to log in before you can comment on or make changes to this bug.